--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ foundation = "1.9.4"
 constraintlayout-compose = "1.1.1"
 ui = "1.9.4"
 retrofit-version = "2.9.0"
+runtimeLivedata = "1.9.4"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -35,6 +36,7 @@ constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayou
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "ui" }
 retrofit-compose = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit-version" }
 retrofit-gson-convertor = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit-version" }
+androidx-compose-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
