--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,21 @@
 [versions]
-agp = "8.11.2"
-kotlin = "2.0.21"
+agp = "8.13.0"
+kotlin = "2.2.21"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.9.4"
 activityCompose = "1.11.0"
-composeBom = "2024.09.00"
+composeBom = "2025.10.01"
 navigation = "2.9.5"
 foundation = "1.9.4"
 constraintlayout-compose = "1.1.1"
 ui = "1.9.4"
-retrofit-version = "2.9.0"
+retrofit-version = "3.0.0"
 runtimeLivedata = "1.9.4"
+coil-version ="3.3.0"
+material-icons-version = "1.7.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -35,8 +37,10 @@ androidx-compose-foundation = { group = "androidx.compose.foundation", name = "f
 constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayout-compose" }
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "ui" }
 retrofit-compose = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit-version" }
+coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil-version" }
 retrofit-gson-convertor = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit-version" }
 androidx-compose-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
+material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "material-icons-version" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
